--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,39 @@ body {
     color: red;
 }
 
-.header {
-    height: 40px;
-    background-color: blue;
+.navbar {
+    height: 93px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #f0f0f0;
+}
+
+.navbar__logo {
+    width: 200px;
+}
+
+.navbar__menu {
+    display: flex;
+}
+
+.navbar__menu-item {
+    padding-right: 27px;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    color: #333333;
+    line-height: 20px;
+    opacity: 0.6;
+    cursor: pointer;
+}
+
+.navbar__menu-item_active {
+    opacity: 1;
 }
 
 .footer {
     height: 61px;
+    width: 100%;
+    bottom: 0;
     background-color: red;
     position: fixed;
-    bottom: -61px;
 }
