--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,17 @@
 * {
   box-sizing: border-box;
+  font-family: 'ArialMT', Arial, sans-serif;
 }
+
+.bold {
+  font-family: 'Arial-BoldMT', Arial, sans-serif;
+}
+
+@font-face {
+  font-family: 'Arial-BoldMT', Arial, sans-serif;
+  src: url(assets/fonts/Arial-BoldMT.otf);
+}
+
 .navbar {
   height: 93px;
   display: flex;
@@ -17,13 +28,14 @@
 }
 
 .navbar__menu-item {
+  font-family: 'Arial-BoldMT', Arial, sans-serif;
   padding-right: 27px;
-  font-family: Arial, sans-serif;
   font-size: 16px;
   color: #333333;
   line-height: 20px;
   opacity: 0.6;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .navbar__menu-item_active,
@@ -32,15 +44,17 @@
 }
 
 .footer {
+  display: flex;
   height: 61px;
   width: 100%;
   bottom: 0;
   position: fixed;
+  background-color: white;
+  padding: 22px 40px;
 }
 
 .content {
   margin: 29px 39px;
-  border: 1px solid red;
   display: flex;
   flex-direction: column;
 }
@@ -69,15 +83,26 @@
 .main-panel {
   height: 331px;
   width: 630px;
-  border: 1px solid blue;
   background-image: url("./assets/bg@1x.png");
   padding: 20px 25px;
 }
 
+.main-panel__title {
+  font-family: 'Arial-BoldMT', Arial, sans-serif;
+  font-size: 27px;
+  color: #333333;
+}
+
+.main-panel__status {
+  font-size: 14px;
+  color: #333333;
+  margin-top:6px;
+}
+
 .dashboard__header {
+  font-family: 'Arial-BoldMT', Arial, sans-serif;
   margin-bottom: 20px;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   color: #333333;
   line-height: 20px;
 }
@@ -94,9 +119,9 @@
   background-color: #f7f7f7;
   border-radius: 20px;
   padding: 14.1px 15px;
-  white-space: pre-wrap;
+  white-space: normal;
   margin: 15px;
-  display: pointer;
+  cursor: pointer;
 }
 
 .panel:hover {
@@ -104,14 +129,50 @@
   box-shadow: 0 2px 6px 0 rgba(197, 186, 186, 0.5);
 }
 
-.footer a {
+.panel__title {
+  font-family: 'Arial-BoldMT', Arial, sans-serif;
+  font-size:14px;
+  color: #333333;
+  letter-spacing: 0;
+  text-align: left;
+  margin-top: 15px;
+}
+
+.panel__info {
+  font-size: 12px;
+  color: #858585;
+  letter-spacing: 0;
+  text-align: left;
+  margin-top: 4.5px;
+}
+
+.footer * {
   font-size: 12px;
   color: #858585;
   letter-spacing: 0.01px;
   text-align: left;
+  text-decoration: none;
+  margin-left:20px;
 }
 
 .devices__list {
   display: flex;
   flex-wrap: wrap;
+}
+
+.panel__icon {
+  width: 24px;
+  height: 24px;
+}
+
+.icon-sun2 {
+  background-image: url(assets/icon_sun_2.svg);
+}
+
+.icon-clock {
+  background-image: url(assets/icon_scheduled.svg);
+}
+
+.icon-temperature2 {
+  background-image: url(assets/icon_temperature_2.svg);
 }
