--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@
 }
 
 .content {
-  margin: 29px 39px;
+  margin: 29px 39px 90px 39px;
   display: flex;
   flex-direction: column;
 }
@@ -77,8 +77,7 @@
   margin-right: 26px;
 }
 
-.dashboard__panel {
-}
+.dashboard__panel {}
 
 .main-panel {
   height: 331px;
@@ -96,7 +95,7 @@
 .main-panel__status {
   font-size: 14px;
   color: #333333;
-  margin-top:6px;
+  margin-top: 6px;
 }
 
 .dashboard__header {
@@ -113,9 +112,38 @@
   flex-wrap: wrap;
 }
 
+.devices__header {
+  display: flex;
+}
+
+.devices__header > * {
+  margin-left: 10px;
+  margin: auto 0 auto 10px;
+}
+
+.devices__group-button {
+  font-family: Arial-BoldMT;
+  font-size: 13px;
+  color: #000000;
+  text-align: left;
+  background: #F7F7F7;
+  border-radius: 20px;
+  padding: 8px 15px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.devices__group-button:hover {
+  box-shadow: 0 2px 6px 0 rgba(197, 186, 186, 0.5);
+}
+
+.devices__group-button_active {
+  background: #FFD93E;
+}
+
 .panel {
   width: 200px;
-  height: 100px;
+  min-height: 100px;
   background-color: #f7f7f7;
   border-radius: 20px;
   padding: 14.1px 15px;
@@ -131,7 +159,7 @@
 
 .panel__title {
   font-family: 'Arial-BoldMT', Arial, sans-serif;
-  font-size:14px;
+  font-size: 14px;
   color: #333333;
   letter-spacing: 0;
   text-align: left;
@@ -152,17 +180,21 @@
   letter-spacing: 0.01px;
   text-align: left;
   text-decoration: none;
-  margin-left:20px;
+  margin-left: 20px;
 }
 
 .devices__list {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .panel__icon {
   width: 24px;
   height: 24px;
+}
+
+.icon-sun {
+  background-image: url(assets/icon_sun.svg);
 }
 
 .icon-sun2 {
@@ -171,6 +203,10 @@
 
 .icon-clock {
   background-image: url(assets/icon_scheduled.svg);
+}
+
+.icon-temperature {
+  background-image: url(assets/icon_temperature.svg);
 }
 
 .icon-temperature2 {
