--- a/src/index.css
+++ b/src/index.css
@@ -85,13 +85,17 @@
   margin-right: 26px;
 }
 
-.dashboard__panel {}
+.dashboard__panel {
+  min-width: 450px;
+  width:100%;
+  flex: 1 0 50%;
+}
 
 .main-panel {
   display: flex;
   height: 331px;
-  width: 630px;
   background-image: url("./assets/bg@1x.png");
+  background-size: 100% 100%;
   padding: 20px 25px;
   justify-content: space-between;
 }
@@ -100,6 +104,7 @@
   font-family: 'Arial-BoldMT', Arial, sans-serif;
   font-size: 27px;
   color: #333333;
+  white-space: normal;
 }
 
 .main-panel__status {
@@ -107,6 +112,7 @@
   color: #333333;
   margin-top: 6px;
   margin-bottom: 25px;
+  white-space: normal;
 }
 
 .dashboard__header {
@@ -262,3 +268,6 @@
   width: 100%;
 }
 
+.main-panel__col:not(:last-child) {
+  margin-right: 15px;
+}
